fix: add bottom spacing

--- a/src/pages/index.module.scss
+++ b/src/pages/index.module.scss
@@ -25,4 +25,8 @@
   img {
     max-width: 300px;
   }
+
+  &:last-child {
+    margin-bottom: 80px;
+  }
 }
